<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/dialog_background"
        android:padding="16dp">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"
            style="@style/DialogTextStyle.Head"
            app:layout_constraintStart_toStartOf="@+id/dialog_image_1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/close_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/main_icon_background"
            android:backgroundTint="@color/background_color"
            android:padding="@dimen/Space4x"
            android:src="@drawable/ic_dialog_close_vector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/red"/>

        <ImageView
            android:id="@+id/dialog_image_1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/Space2x"
            android:layout_marginTop="@dimen/Space8x"
            android:background="@drawable/main_icon_background"
            android:padding="10dp"
            android:src="@drawable/ic_dialog_vector1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

        <ImageView
            android:id="@+id/dialog_image_2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/Space8x"
            android:background="@drawable/main_icon_background"
            android:padding="@dimen/Space4x"
            android:src="@drawable/ic_dialog_vector2"
            app:layout_constraintStart_toStartOf="@+id/dialog_image_1"
            app:layout_constraintTop_toBottomOf="@+id/dialog_image_1" />

        <ImageView
            android:id="@+id/dialog_image_3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/Space8x"
            android:background="@drawable/main_icon_background"
            android:padding="@dimen/Space4x"
            android:src="@drawable/ic_dialog_vector3"
            app:layout_constraintStart_toStartOf="@+id/dialog_image_2"
            app:layout_constraintTop_toBottomOf="@+id/dialog_image_2" />

        <ImageView
            android:id="@+id/dialog_image_4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/Space8x"
            android:background="@drawable/main_icon_background"
            android:padding="@dimen/Space4x"
            android:src="@drawable/ic_dialog_vector4"
            app:layout_constraintStart_toStartOf="@+id/dialog_image_3"
            app:layout_constraintTop_toBottomOf="@+id/dialog_image_3" />

        <TextView
            android:id="@+id/dialog_instructions_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/Space6x"
            android:layout_marginTop="@dimen/Space2x"
            android:text="@string/instructions_1"
            style="@style/DialogTextStyle.Title"
            app:layout_constraintStart_toEndOf="@+id/dialog_image_1"
            app:layout_constraintTop_toTopOf="@+id/dialog_image_1" />

        <TextView
            android:id="@+id/dialog_instructions_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/Space6x"
            android:text="@string/instructions_2"
            style="@style/DialogTextStyle.Title"
            app:layout_constraintStart_toEndOf="@+id/dialog_image_2"
            app:layout_constraintTop_toTopOf="@+id/dialog_image_2" />

        <TextView
            android:id="@+id/dialog_instructions_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/Space6x"
            android:text="@string/instructions_3"
            style="@style/DialogTextStyle.Title"
            app:layout_constraintStart_toEndOf="@+id/dialog_image_3"
            app:layout_constraintTop_toTopOf="@+id/dialog_image_3" />

        <TextView
            android:id="@+id/dialog_instructions_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/Space6x"
            android:text="@string/instructions_4"
            style="@style/DialogTextStyle.Title"
            app:layout_constraintStart_toEndOf="@+id/dialog_image_4"
            app:layout_constraintTop_toTopOf="@+id/dialog_image_4" />

        <TextView
            android:id="@+id/dialog_subtitle_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_1_sub_title"
            style="@style/DialogTextStyle.SubTitle"
            app:layout_constraintStart_toStartOf="@+id/dialog_instructions_1"
            app:layout_constraintTop_toBottomOf="@+id/dialog_instructions_1" />

        <TextView
            android:id="@+id/dialog_subtitle_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_2_sub_title"
            style="@style/DialogTextStyle.SubTitle"
            app:layout_constraintStart_toStartOf="@+id/dialog_instructions_2"
            app:layout_constraintTop_toBottomOf="@+id/dialog_instructions_2" />

        <TextView
            android:id="@+id/dialog_subtitle_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_3_sub_title"
            style="@style/DialogTextStyle.SubTitle"
            app:layout_constraintStart_toStartOf="@+id/dialog_instructions_3"
            app:layout_constraintTop_toBottomOf="@+id/dialog_instructions_3" />

        <TextView
            android:id="@+id/dialog_subtitle_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DialogTextStyle.SubTitle"
            android:text="@string/instructions_4_sub_title"
            app:layout_constraintStart_toStartOf="@+id/dialog_instructions_4"
            app:layout_constraintTop_toBottomOf="@+id/dialog_instructions_4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>