<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="335dp"
    android:layout_height="320dp"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:padding="16dp">

    <ImageView
        android:id="@+id/close_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/main_icon_background"
        android:backgroundTint="#EDE8E3"
        android:padding="8dp"
        android:src="@drawable/ic_dialog_close_vector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_title"
        style="@style/DialogTextStyle.Head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_exit_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

    <TextView
        android:id="@+id/textView"
        style="@style/DialogTextStyle.SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_subtitle"
        app:layout_constraintBottom_toTopOf="@+id/start_play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_play_button"
        style="@style/ButtonTextStyle.Main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>